--- a/django1/src/vote/templates/vote/qregiste.html
+++ b/django1/src/vote/templates/vote/qregiste.html
@@ -1,7 +1,7 @@
 {# form : <input>과 <label>태그가 테이블 형태로 있는 문자열 #}
 {% extends 'base.html' %}
 {% block content %}
-<h3>질문 생성</h3>
+<h3>운동모임 생성</h3>
 <form action="/vote/qr/" method="post">
 	{% csrf_token %}
 	<table>
