--- a/django1/src/vote/templates/vote/qupdate.html
+++ b/django1/src/vote/templates/vote/qupdate.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <body>
-<h3>질문 수정하기 </h3>
+<h3>운동모임 수정하기 </h3>
 {# form : <input>이 구성된 <p>형식의 HTML코드 문자열 #}
 <form action="" method = 'post'>
 	{% csrf_token %}
